add keydown to the textbox of BingMap grid

--- a/Client/Components/BingMapAutoSuggestBusinessGrid.razor
+++ b/Client/Components/BingMapAutoSuggestBusinessGrid.razor
@@ -6,7 +6,7 @@
 <br>
 <br>
     <div class="input-group mb-3 " >
-        <input class="form-control" @bind-value="_query"/>
+        <input class="form-control" @bind-value="_query" @bind-value:event="oninput" @onkeydown="KeyPress"/>
         <button type="button" @onclick="ClearQuery" class="btn bg-transparent" style="margin-left: -40px; z-index: 100;">
             <i class="bi bi-backspace"></i>
         </button>
